--- a/Stotram.html
+++ b/Stotram.html
@@ -185,7 +185,7 @@ iframe {
         <p>Play the audio to automatically scroll the document. Adjust the speed as needed.</p>
         
         <!-- Audio source with native controls removed to prevent a duplicate progress bar -->
-        <audio id="my-audio" src="https://naveen1241.github.io/pdfjs-viewer/VSN_Full_Stotram.mp3"></audio>
+        <audio id="my-audio" src="./pdfjs-viewer/VSN_Full_Stotram.mp3"></audio>
 
         <!-- Custom audio player -->
         <div class="custom-audio-player">
@@ -220,7 +220,7 @@ iframe {
     <div class="pdf-container">
         <!-- PDF source using the full absolute URL -->
         <iframe id="pdf-viewer"
-            src="https://naveen1241.github.io/pdfjs-viewer/web/viewer.html?file=https://naveen1241.github.io/pdfjs-viewer/VSN_Scrolling_Stotram.pdf">
+            src="./pdfjs-viewer/web/viewer.html?file=https://naveen1241.github.io/pdfjs-viewer/VSN_Scrolling_Stotram.pdf">
         </iframe>
     </div>
 </div>
