--- a/Stotram.html
+++ b/Stotram.html
@@ -13,23 +13,22 @@
             --text-color: #cfd8dc;
             --light-text: #eceff1;
         }
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: var(--primary-bg);
-    color: var(--text-color);
-}
-.container-wrapper {
-    display: flex;
-    flex-direction: column;
-    height: 100vh; /* Or use 100% if the body has a consistent height */
-    background-color: var(--primary-bg);
-}
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: var(--primary-bg);
+            color: var(--text-color);
+        }
+        .container-wrapper {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            background-color: var(--primary-bg);
+        }
         .controls {
             padding: 20px;
             background-color: var(--secondary-bg);
@@ -196,4 +195,3 @@ body {
     <script src="script.js"></script>
 </body>
 </html>
-
