--- a/pdfjs-viewer/web/viewer.html
+++ b/pdfjs-viewer/web/viewer.html
@@ -805,7 +805,24 @@ See https://github.com/adobe-type-tools/cmap-resources
   });
 </script>
 
-
+<script>
+      window.addEventListener('message', function(event) {
+        // Only accept messages from the expected origin for security
+        if (event.origin !== window.location.origin) {
+            return;
+        }
+        try {
+          const data = JSON.parse(event.data);
+          if (data && data.type === 'gotoPage' && typeof data.pageNumber === 'number') {
+            if (window.PDFViewerApplication) {
+              window.PDFViewerApplication.page = data.pageNumber;
+            }
+          }
+        } catch (e) {
+          console.error('Failed to parse postMessage data or execute command:', e);
+        }
+      });
+    </script>
       
   </body>
 </html>
