--- a/Stotram.html
+++ b/Stotram.html
@@ -187,7 +187,7 @@
         </div>
         <div class="pdf-container">
             <iframe id="pdf-viewer"
-                src="./pdfjs-viewer/web/viewer.html?file=../VSN_Scrolling_Stotram.pdf">
+                src="./pdfjs-viewer/web/viewer.html?file=../VSN_Scrolling_Stotram.pdf#zoom=page-fit&pagemode=none">
             </iframe>
         </div>
     </div>
@@ -195,3 +195,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
