Update Stotram.html Update 9/23 -1

--- a/Stotram.html
+++ b/Stotram.html
@@ -154,8 +154,7 @@
 <body>
     <div class="container-wrapper">
         <div class="controls">
-            <h1>Audio-Synced Stotram</h1>
-            <p>Play the audio to automatically scroll the document. Adjust the speed as needed.</p>
+            <p>Audio-Synced Stotram. Play the audio to automatically scroll the document. Adjust the speed as needed.</p>
             
             <audio id="my-audio" src="./pdfjs-viewer/VSN_Full_Stotram.mp3"></audio>
             
@@ -195,4 +194,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
